# stable-SSL

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  README.rst  RELEASES.rst  TESTING.md  index.html  objects.inv  pyproject.toml  pytest.ini  requirements-ci.txt  ruff.toml  searchindex.js  setup.cfg  test_auto_queue_creation.py  test_new_queue_architecture.py
.circleci/: config.yml
.doctrees/: bibliography.doctree  cache_dir.doctree  cli.doctree  contributing.doctree  fsdp.doctree  modules.doctree  releases.doctree  sg_execution_times.doctree  stable_pretraining.backbone.doctree  stable_pretraining.callbacks.doctree  stable_pretraining.data.doctree  stable_pretraining.doctree  stable_pretraining.loggers.doctree  stable_pretraining.losses.doctree  stable_pretraining.methods.doctree  stable_pretraining.optim.doctree  stable_pretraining.registry.doctree  stable_pretraining.utils.doctree
.doctrees/__intersphinx_cache__/: omegaconf_objects.inv
.doctrees/api/: backbone.doctree  data.doctree  forward.doctree  losses.doctree  manager.doctree  module.doctree  monitors.doctree  optim.doctree  registry.doctree  web.doctree
.doctrees/auto_examples/: imbalance_supervised_learning.doctree  index.doctree  multi_layer_probe.doctree  sg_execution_times.doctree  supervised_learning.doctree  wandb_figures.doctree  wandb_reader.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml  circleci.yml  flake8.yml  pydocstyle.yml  release.yaml  testing.yml
_downloads/18cb52aef2375265f5b48bcc95426294/: wandb_figures.ipynb
_downloads/1a3e29c018c872755e02e061edbaeafc/: supervised_learning.ipynb
_downloads/2d6cde73acddee8d0990e0006b2a9ff7/: imbalance_supervised_learning.ipynb
_downloads/3e627708df1936742eef3d97c49da50f/: wandb_reader.ipynb
_downloads/7264498e4ddb114ecc9474a4b7ee4cdb/: multi_layer_probe.py
_downloads/7ebeb381a535792d69a3bac42e6900d7/: multi_layer_probe.ipynb
_modules/: index.html
_modules/typing/: index.html
_sources/: fsdp.rst  index.rst  modules.rst  stable_pretraining.backbone.rst  stable_pretraining.callbacks.rst  stable_pretraining.data.rst  stable_pretraining.loggers.rst  stable_pretraining.losses.rst  stable_pretraining.methods.rst  stable_pretraining.optim.rst  stable_pretraining.registry.rst  stable_pretraining.rst  stable_pretraining.utils.rst
_sources/auto_examples/: imbalance_supervised_learning.rst  index.rst  multi_layer_probe.rst  sg_execution_times.rst  supervised_learning.rst  wandb_figures.rst  wandb_reader.rst
_static/: documentation_options.js
api/backbone/: index.html
api/data/: index.html
api/forward/: index.html
api/losses/: index.html
api/manager/: index.html
api/module/: index.html
api/monitors/: index.html
api/optim/: index.html
api/registry/: index.html
api/web/: index.html
assets/: static_timm.json
assets/cm-unicode-0.7.0 2/: FontLog.txt  INSTALL
assets/examples/: custom_supervised.py  imbalance_supervised_learning.py  wandb_figures.py
auto_examples/: index.html
auto_examples/imbalance_supervised_learning/: index.html
auto_examples/multi_layer_probe/: index.html
auto_examples/sg_execution_times/: index.html
auto_examples/supervised_learning/: index.html
auto_examples/wandb_figures/: index.html
auto_examples/wandb_reader/: index.html
benchmarks/: README.md  README.rst  benchmark_masked_timm_vit.py  cifar100_simclr.yaml  cifar10_simclr.yaml  hydra_defaults.yaml  imagenette_simclr.yaml  run.py  utils.py
benchmarks/cifar10/: barlow-resnet18.py  barlowtwins.yaml  byol-resnet18.py  byol-resnet50.py  byol.yaml  dino.yaml  mae_vits.py  nnclr-resnet18.py  shared_config.yaml  simclr-resnet18.py  simclr.yaml  swav-resnet18.py  vicreg-resnet18.py  vicreg.yaml
benchmarks/cifar100/: byol.yaml  shared_config.yaml  simclr.yaml  vicreg.yaml
benchmarks/config/: default.yaml
benchmarks/data/: cifar10.yaml  imagenette.yaml
benchmarks/diffusiondb2m/: clip-vitb-32.py  clip-vitb.py  clip.py
benchmarks/hardware/: gpu-he_partition.yaml  gpu_partition.yaml
benchmarks/imagenet10/: auto_probe_inet10.py  ijepa-vit-base.py  lejepa-vit-base.py  lejepa-vit-small-fsdp.py  lejepa-vit-small.py  lejepa_vit_small_fsdp.py  mae-vit-base.py  new-ijepa-vit-base.py  offline_probe.py  old-ijepa-vit-base.py
benchmarks/imagenet100/: auto_probe_inet100.py  barlow-resnet18.py  barlow-resnet50.py  byol-resnet18.py  byol-resnet50-8gpus.py  byol-resnet50.py  (+21 more)
bibliography/: index.html
cache_dir/: index.html
cli/: index.html  plot_metric.py
contributing/: index.html
examples/: GALLERY_HEADER.rst  README.rst  custom_supervised.py  imbalance_supervised_learning.py  mila_wmw_1.py  multi_layer_probe.py  simclr_cifar10_config.yaml  simclr_cifar10_full.yaml  supervised_learning.py  train.py  wandb_figures.py  wandb_reader.py
fsdp/: index.html
genindex/: index.html
modules/: index.html
py-modindex/: index.html
releases/: index.html
runs/: hparams.yaml  main.py  run_exp.py  run_simclr.py  run_supervised.py
search/: index.html
sg_execution_times/: index.html
stable-ssl/: __about__.py  config.py  main.py  nn.py  positive_pair_sampler.py  simclr.py  trainer.py
stable_pretraining/: __about__.py  __init__.py  _config.py  _version.py  cli.py  config.py  forward.py  index.html  losses.py  manager.py  module.py  run.py  static.py  train.py
stable_pretraining.backbone/: index.html
stable_pretraining.callbacks/: index.html
stable_pretraining.data/: index.html
stable_pretraining.loggers/: index.html
stable_pretraining.losses/: index.html
stable_pretraining.methods/: index.html
stable_pretraining.optim/: index.html
stable_pretraining.registry/: index.html
stable_pretraining.utils/: index.html
stable_ssl/: __about__.py  __init__.py  augmentations.py  base.py  cli.py  collaters.py  config.py  data.py  joint_embedding.py  losses.py  manager.py  module.py  modules.py  monitors.py  optimizers.py  positive_pair_sampler.py  reader.py  sampler.py  schedulers.py  static.py  supervised.py  template.py  trainer.py  trainers.py  transforms.py  utils.py  wandb_reader.py
(+827 files in other folders)
