[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-pretraining"
description = "Stable Pretraining Library for Self-Supervised Learning"
authors = []
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "torch",
    "torchvision",
    "hydra-core",
    "lightning",
    "hydra-submitit-launcher",
    "submitit",
    "wandb",
    "datasets",
    "loguru",
    "scikit-learn>=1.7.0",
    "prettytable",
    "timm",
    "transformers",
    "tabulate",
    "matplotlib",
    "requests-cache[all]",
    "richuru",
    "minari[hdf5]>=0.5.3",
    "pillow>=11.3.0",
]

dynamic = ["version"]

# [project.entry-points."console_scripts"]
# stable-pretraining = "stable_pretraining.cli:entry"

[project.entry-points."lightning.pytorch.callbacks_factory"]
stablepretraining_callbacks = "stable_pretraining.callbacks.factories:default"

[tool.setuptools]
packages = ["stable_pretraining"]

[tool.setuptools.dynamic]
version = {attr = "stable_pretraining.__about__.__version__"}

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "codecov",
    "pre-commit",
    "ruff",
]

doc = [
    "sphinx",
    "sphinx-gallery",
    "sphinx-book-theme",
    "sphinxcontrib-bibtex",
    "matplotlib",
    "memory_profiler",
    "myst-parser",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]
ignore = ["D100", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
